--- a/fcc_color_markers/styles.css
+++ b/fcc_color_markers/styles.css
@@ -1,7 +1,9 @@
 h1,footer {
   text-align: center;
 }
-
+footer{
+  font-style: italic;
+}
 .container {
   background-color: rgb(255, 255, 255);
   padding: 10px 0;
