--- a/fcc_rothco_painting/styles.css
+++ b/fcc_rothco_painting/styles.css
@@ -3,11 +3,12 @@
   height: 600px;
   background-color: #910808;
   overflow: hidden;
-  filter: blur(2px);
+  filter: blur(5px);
 }
 
 .frame {
   border: 50px solid rgb(84, 14, 14);
+  background: #dfdeaa ;
   width: 500px;
   padding: 50px;
   margin: 20px auto;
@@ -34,7 +35,7 @@
 }
 
 .one, .two {
-  filter: blur(1px);
+  filter: blur(-5px);
 }
 
 .three {
