--- a/react_dev/src/fcc_react_projects/drum_machine/styles.css
+++ b/react_dev/src/fcc_react_projects/drum_machine/styles.css
@@ -3,10 +3,11 @@ body {
 }
 
 .drum-box {
-    background-color: #65db96;
+    background-color: #cf67ef;
     width: 600px;
     height: 300px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    border-radius: 8px;
 }
 
 
@@ -18,15 +19,14 @@ body {
     
 }
 
-.btn {
+.btn, .btn:focus {
     height: 82px;
     width: 82px;
-    box-shadow: 2px 2px 7px rgba(0,0,0,0.7);
+    box-shadow: 2px 2px 7px rgba(0,0,0,0.8);
 }
-.btn-primary {
-    background-color: #de402e;
-}
-
+.btn:focus {
+    outline: none;
+  }
 
 
 #clip-name {
@@ -41,8 +41,8 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 300px;
-      height:650px; 
+      width: 306px;
+      height:600px;
     }
   
   }
