--- a/react_dev/src/fcc_react_projects/calculator_app/styles.css
+++ b/react_dev/src/fcc_react_projects/calculator_app/styles.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/ds-digital');
 body {
-  background-color: #2ecc71;
+  background-color: #1abc9c;
 }
 .calculator {
   width: 302px;
   margin: 30px auto;
-  background-color: #f4cf38;
+  background-color: #f8e267;
   border: 1px solid #5c5c5c;
   border-radius: 5px;
   box-shadow: 0px 0px 10px #535353;
@@ -13,13 +13,14 @@ body {
 }
 
 #formula-screen {
-  color:#fff046;
+  color:#ffd139;
+  text-shadow: 1px 1px 5px #ffffff; 
   width: 100%;
   height: 30px;
   background-color: #000000;
-  border: 1px solid #595959;
+  border: 1px solid #323232;
   border-radius: 5px;
-  box-shadow: inset 0px 0px 8px #c1c1c1;
+  box-shadow: inset 0px 0px 8px #b9b9b9;
   margin-bottom: 5px;
   text-align: right;
   font-size: 20px;
@@ -72,7 +73,7 @@ body {
 
 
 .button.clear {
-  background-color: #2980b9;
+  background-color: #3d7ee8;
   color: #fff;
   width: 50%;
   box-shadow: 0px 0px 5px #656565;
@@ -93,7 +94,9 @@ body {
   color: #000;
 }
 
-
+#equals {
+  background-color: #7bff8b;
+}
 
 .row {
   display: flex;
