--- a/react_dev/src/fcc_react_redux_projects/random_quote_machine/styles/styles.css
+++ b/react_dev/src/fcc_react_redux_projects/random_quote_machine/styles/styles.css
@@ -13,9 +13,11 @@ body {
 
 #quote-box {
   background: #f6e58d;
+  background: linear-gradient(0deg, #ffe565 0%, #fff0a8 100%);
   border-radius: 0 20px;
   max-width: 800px;
   margin: 80px auto;
+  margin-bottom: 40px;
   padding: 30px 20px;
   box-shadow: 5px 3px 15px rgb(0, 0, 0);
   
@@ -48,7 +50,8 @@ a:hover {
 
 }
 
-.btn {
+.btn, .btn:focus {
+  color: white!important;
   height: 40px;
   min-width: 180px;
   border-radius: 0 12px;
@@ -56,29 +59,31 @@ a:hover {
   text-shadow: 2px 2px 3px #000000;
   border: none;
 }
-.btn-secondary {
-  background-color: rgb(34, 219, 127);
+.btn-new-quote, .btn-new-quote:active {
+  background: linear-gradient(0deg, rgb(21, 94, 212) 0%, rgb(255, 52, 238) 100%);
 }
-.btn-secondary:hover {
-  background-color: rgb(86, 248, 167);;
+.btn-new-quote:hover, .btn-new-quote:focus {
+  background: linear-gradient(0deg, rgb(21, 94, 212) 0%, rgb(243, 136, 234) 100%);
 }
 
-.btn-success {
-  background-color: #00acee;
+.btn-twitter, .btn-twitter:active {
+  background: linear-gradient(0deg, rgb(13, 205, 42) 0%, rgb(21, 78, 212) 100%);
 }
-.btn-success:hover {
-  background-color: #4ac6f8;
+.btn-twitter:hover, .btn-twitter:focus {
+  background: linear-gradient(0deg, rgb(13, 205, 42) 0%, rgb(80, 171, 255) 100%);
 }
-.btn-primary {
-  background-color: #ff53f1;
+.btn-tmblr, .btn-tmblr:active {
+  background: linear-gradient(0deg, rgb(223, 229, 42) 0%, rgb(21, 152, 47) 100%);
 }
-.btn-primary:hover {
-  background-color: #fe7df4;
+.btn-tmblr:hover, .btn-tmblr:focus {
+  background: linear-gradient(0deg, rgb(223, 229, 42) 0%, rgb(81, 241, 116) 100%);
 }
+
+
 .author {
   color: rgb(0, 0, 0);
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.713), -1px -1px 2px rgba(255, 255, 255, 0.611);
-  margin-top: 50px;
+  margin-top: 100px;
 }
 @media screen and (max-width: 750px) {
   #quote-box {
